--- a/test.html
+++ b/test.html
@@ -39,6 +39,7 @@
         transform: scaleX(-1);
         display: none;
         ">
+
         </video>
 
         <canvas id="output" />
@@ -51,6 +52,33 @@
     <script src="demo_util.js"></script>
     <script src="stats.min.js "></script>
     <script src="camera.js"></script>
+    <script>
+
+  var videoElement = document.getElementById("output");
+
+  function toggleFullScreen() {
+    if (!document.mozFullScreen && !document.webkitFullScreen) {
+      if (videoElement.mozRequestFullScreen) {
+        videoElement.mozRequestFullScreen();
+      } else {
+        videoElement.webkitRequestFullScreen(Element.ALLOW_KEYBOARD_INPUT);
+      }
+    } else {
+      if (document.mozCancelFullScreen) {
+        document.mozCancelFullScreen();
+      } else {
+        document.webkitCancelFullScreen();
+      }
+    }
+  }
+
+  document.addEventListener("keydown", function(e) {
+    if (e.keyCode == 13) {
+      toggleFullScreen();
+    }
+  }, false);
+
+    </script>
 </body>
 
 </html>
