--- a/www/index.html
+++ b/www/index.html
@@ -255,10 +255,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
 							<span class="colorlib-counter js-counter" data-from="0" data-to="313" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Cups of Coffee and test</span>
+							<span class="colorlib-counter-label">Cups of Coffee</span>
 						</div>
-						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="15" data-speed="5000" data-refresh-interval="50"></span>
+						<div class="col-md-3 text-center animate					<span class="colorlib-counter js-counter" data-from="0" data-to="15" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
