--- a/www/index.html
+++ b/www/index.html
@@ -41,13 +41,7 @@
         <a class="js-scroll-trigger" href="#about">About</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
+        <a class="js-scroll-trigger" href="#team">Team</a>
       </li>
     </ul>
   </nav>
@@ -78,7 +72,7 @@
 
 
   <!-- Section: Team v.1 -->
-<section class="team-section text-center my-5">
+<section class="team-section text-center my-5" id="team">
 
   <!-- Section heading -->
   <h2 class="h1-responsive font-weight-bold my-5">Meet Our Team</h2>
@@ -90,8 +84,8 @@
     <!-- Grid column -->
     <div class="col-md-3 col-md-6">
       <div class="avatar mx-auto">
-        <img src="/home/adil/adiltirur.github.io/www/img/gabor.jpg" class="rounded-circle z-depth-1"
-          alt="Sample avatar">
+        <img src="gabor.jpg" class="rounded-circle z-depth-1"
+          alt="Gabor">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3">Gábor Miskovics</h5>
       <p class="text-uppercase blue-text"><strong>Product Manager</strong></p>
@@ -102,8 +96,8 @@
     <!-- Grid column -->
     <div class="col-md-3 col-md-6">
       <div class="avatar mx-auto">
-        <img src="/home/adil/adiltirur.github.io/www/img/nate.jpg" class="rounded-circle z-depth-1"
-          alt="Sample avatar">
+        <img src="nate.jpg" class="rounded-circle z-depth-1"
+          alt="Nate">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3">Jonathan Kuhl</h5>
       <p class="text-uppercase blue-text"><strong>Product Manager</strong></p>
@@ -112,10 +106,12 @@
     <!-- Grid column -->
 
     <!-- Grid column -->
+
     <div class="col-md-3 col-md-6">
       <div class="avatar mx-auto">
-        <img src="/home/adil/adiltirur.github.io/www/img/sofia.jpg" class="rounded-circle z-depth-1"
-          alt="Sample avatar">
+
+        <img src="sofia.jpg" class="rounded-circle z-depth-1"
+          alt="Sofia">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3">Sofiia Tatarinova</h5>
       <p class="text-uppercase blue-text"><strong>Interaction Designer</strong></p>
@@ -126,8 +122,8 @@
     <!-- Grid column -->
     <div class="col-md-3 col-md-6">
       <div class="avatar mx-auto">
-        <img src="/home/adil/adiltirur.github.io/www/img/ansab.jpg" class="rounded-circle z-depth-1"
-          alt="Sample avatar">
+        <img src="ansab.jpg" class="rounded-circle z-depth-1"
+          alt="Ansab">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3">Muhammad Ansab Shohab</h5>
       <p class="text-uppercase blue-text"><strong>Software Engineer</strong></p>
@@ -137,8 +133,8 @@
     <!-- Grid column -->
     <div class="col-md-3 col-md-6">
       <div class="avatar mx-auto">
-        <img src="/home/adil/adiltirur.github.io/www/img/iryna.jpg" class="rounded-circle z-depth-1"
-          alt="Sample avatar">
+        <img src="iryna.jpg" class="rounded-circle z-depth-1"
+          alt="Iryna">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3">Iryna Soltyska</h5>
       <p class="text-uppercase blue-text"><strong>Software Engineer</strong></p>
@@ -148,8 +144,8 @@
     <!-- Grid column -->
     <div class="col-md-3 col-md-6">
       <div class="avatar mx-auto">
-        <img src="/home/adil/adiltirur.github.io/www/img/adil.jpg" class="rounded-circle z-depth-1"
-          alt="Sample avatar">
+        <img src="adil.jpg" class="rounded-circle z-depth-1"
+          alt="Adil">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3">Adil Chakkala Paramba</h5>
       <p class="text-uppercase blue-text"><strong>Artificial Intelligence Engineer</strong></p>
