--- a/www/index.html
+++ b/www/index.html
@@ -159,6 +159,28 @@
 
 </section>
 <!-- Section: Team v.1 -->
+<footer class="footer text-center">
+  <div class="container">
+    <ul class="list-inline mb-5">
+      <li class="list-inline-item">
+        <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/digitalproductschool">
+          <i class="icon-social-facebook"></i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/dpschool_io">
+          <i class="icon-social-twitter"></i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="social-link rounded-circle text-white" href="https://github.com/DigitalProductschool">
+          <i class="icon-social-github"></i>
+        </a>
+      </li>
+    </ul>
+
+  </div>
+</footer>
 
 
   <!-- Call to Action -->
