--- a/www/index.html
+++ b/www/index.html
@@ -47,15 +47,18 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead d-flex">
+  <header class="masthead lg-1">
     <div class="container text-center my-auto">
       <h1 class="mb-1">Team7</h1>
       <h3 class="mb-5">
         <em>Digital Product School, Munich</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-    </div>
-    <div class="overlay"></div>
+      
+      </div>
+        <div class="container text-center mt-4">
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+        </div>
+      <div class="overlay"></div>
   </header>
 
   <!-- About -->
