embedded sprint presentation to website

--- a/www/index.html
+++ b/www/index.html
@@ -167,6 +167,19 @@
   <!-- Grid row -->
 
 </section>
+<!-- Header -->
+
+
+  <section class="content-section bg-light" id="about">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-10 mx-auto">
+ <iframe src="https://docs.google.com/a/dpschool.io/presentation/d/e/2PACX-1vS_7NAIa3dBT9DWff9WYvzwlUtgSOy7Q4uVMr12uoo1PXAld2oHe5by1hkgX3-GHuFvsbHTVXOXw7m9/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true""> </iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 <!-- Github Activity log (To be verified)-->
 <section class="github section">
