--- a/www/index.html
+++ b/www/index.html
@@ -63,6 +63,7 @@
         <em>Digital Product School, Munich</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" onclick="myFunction()" href="#ppt">Presentation</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -79,6 +80,16 @@
     </div>
   </section>
 
+  <script>
+  function myFunction() {
+    var x = document.getElementById("myDIV");
+    if (x.style.display === "none") {
+      x.style.display = "block";
+    } else {
+      x.style.display = "none";
+    }
+  }
+  </script>
 
   <!-- Section: Team v.1 -->
 <section class="team-section text-center my-5" id="team">
@@ -170,16 +181,15 @@
 <!-- Header -->
 
 
-  <section class="content-section bg-light" id="about">
-    <div class="container text-center">
+  <section class="content-section bg-light" id="ppt">
+    <div class="container text-center" id="myDIV">
       <div class="row">
         <div class="col-lg-10 mx-auto">
- <iframe src="https://docs.google.com/a/dpschool.io/presentation/d/e/2PACX-1vS_7NAIa3dBT9DWff9WYvzwlUtgSOy7Q4uVMr12uoo1PXAld2oHe5by1hkgX3-GHuFvsbHTVXOXw7m9/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true""> </iframe>
+            <iframe src= "https://docs.google.com/a/dpschool.io/presentation/d/e/2PACX-1vS_7NAIa3dBT9DWff9WYvzwlUtgSOy7Q4uVMr12uoo1PXAld2oHe5by1hkgX3-GHuFvsbHTVXOXw7m9/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"> </iframe>
         </div>
       </div>
     </div>
   </section>
-
 
 <!-- Github Activity log (To be verified)-->
 <section class="github section">
