--- a/www/index.html
+++ b/www/index.html
@@ -63,22 +63,25 @@
         <em>Digital Product School, Munich</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" onclick="myFunction()" href="#ppt">Presentation</a>
+
     </div>
     <div class="overlay"></div>
   </header>
 
   <!-- About -->
-  <section class="content-section bg-light" id="about">
-    <div class="container text-center">
+
+  <section class="content-section bg-light" id="about" >
+    <div class="container text-center" >
       <div class="row">
         <div class="col-lg-10 mx-auto">
+
           <h2>Wouldn't it be great, if Sustainable transport was a trend for teens!</h2>
           <p class="lead mb-5">Making World a better place to live</a>!</p>
         </div>
       </div>
     </div>
   </section>
+
 
   <script>
   function myFunction() {
@@ -179,19 +182,20 @@
 
 </section>
 <!-- Header -->
-
-
-  <section class="content-section bg-light" id="ppt">
-    <div class="container text-center" id="myDIV">
-      <div class="row">
-        <div class="col-lg-10 mx-auto">
-            <iframe src= "https://docs.google.com/a/dpschool.io/presentation/d/e/2PACX-1vS_7NAIa3dBT9DWff9WYvzwlUtgSOy7Q4uVMr12uoo1PXAld2oHe5by1hkgX3-GHuFvsbHTVXOXw7m9/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"> </iframe>
+<section class="content-section bg-light" >
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-lg-10 mx-auto" >
+                      <a class="btn btn-primary btn-xl js-scroll-trigger" onclick="myFunction()" href="#ppt">Presentation</a>
+  </div>
         </div>
-      </div>
-    </div>
-  </section>
+  </div>
+</section>
 
-<!-- Github Activity log (To be verified)-->
+
+
+
+<!--
 <section class="github section">
     <div class="section-inner">
         <h2 class="heading">Github Activities</h2>
@@ -199,18 +203,26 @@
 
         <div id="github-graph" class="github-graph">
 
-        </div><!--//github-graph-->
+        </div>
 
-
-
-        <!--//Usage: https://caseyscarborough.com/projects/github-activity/ -->
         <div id="feed" class="feed">
 
-        </div><!--//ghfeed-->
+        </div>
 
 
-    </div><!--//secton-inner-->
-</section><!--//section-->
+    </div>
+</section>-->
+<section class="content-section bg-light" id="ppt">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-lg-10 mx-auto" id="myDIV">
+          <iframe src= "https://docs.google.com/a/dpschool.io/presentation/d/e/2PACX-1vS_7NAIa3dBT9DWff9WYvzwlUtgSOy7Q4uVMr12uoo1PXAld2oHe5by1hkgX3-GHuFvsbHTVXOXw7m9/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"> </iframe>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 <!-- Section: Team v.1 -->
 <footer class="footer text-center">
   <div class="container">
