--- a/www/index.html
+++ b/www/index.html
@@ -1,287 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
+    <title>PoseNet - Camera Feed Demo</title>
+    <style>
+    .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        color: black;
+    }
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    .footer-text {
+        max-width: 600px;
+        text-align: center;
+        margin: auto;
+    }
 
-  <title>Team7@DPS</title>
-
-  <!-- Bootstrap Core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom Fonts -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-
-  <!-- Custom CSS -->
-  <link href="css/stylish-portfolio.min.css" rel="stylesheet">
-
-  <!--Github Activity log -->
-  <!----------------------------------------------------------------------------------------------------------------->
-  <!-- github calendar css -->
-  <link rel="stylesheet" href="plugins/github-calendar/dist/github-calendar.css">
-  <!-- github acitivity css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-  <link rel="stylesheet" href="plugins/github-activity/github-activity-0.1.5.min.css">
-
-
+    @media only screen and (max-width: 600px) {
+      .footer-text, .dg {
+        display: none;
+      }
+    }
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body id="page-top">
-
-  <!-- Navigation -->
-  <a class="menu-toggle rounded" href="#">
-    <i class="fas fa-bars"></i>
-  </a>
-  <nav id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-      <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Team7</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#page-top">Home</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#about">About</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#team">Team</a>
-      </li>
-    </ul>
-  </nav>
-
-  <!-- Header -->
-  <header class="masthead d-flex">
-    <div class="container text-center my-auto">
-      <h1 class="mb-1">Team7</h1>
-      <h3 class="mb-5">
-        <em>Digital Product School, Munich</em>
-      </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-
+<body>
+    <div id="loading">
+        Loading the model...
     </div>
-    <div class="overlay"></div>
-  </header>
 
-  <!-- About -->
-
-  <section class="content-section bg-light" id="about" >
-    <div class="container text-center" >
-      <div class="row">
-        <div class="col-lg-10 mx-auto">
-
-          <h2>Wouldn't it be great, if Sustainable transport was a trend for teens!</h2>
-          <p class="lead mb-5">Making World a better place to live</a>!</p>
+    <div id='main' style='display:none'>
+        <video id="video" playsinline style=" -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        display: none;
+        ">
+        </video>
+        <canvas id="output" />
+    </div>
+    <div class="footer">
+        <div class="footer-text">
+            <p>
+                PoseNet runs with either a <strong>single-pose</strong> or <strong>multi-pose</strong> detection algorithm. The single person pose detector is faster and more accurate but requires only one subject present in the image.
+                <br>
+                <br> The <strong>output stride</strong> and <strong>image scale factor</strong> have the largest effects on accuracy/speed. A <i>higher</i> output stride results in lower accuracy but higher speed. A <i>higher</i> image scale factor results in higher accuracy but lower speed.
+                <br>
+                <br> This is a Pure Javascript implementation of: <a href="https://github.com/tensorflow/tfjs-models/tree/master/posenet" target="_blank" rel="noopener">PoseNet</a>.
+                <br>
+                <br> Thank you <a href="https://js.tensorflow.org" target="_blank" rel="noopener">TensorFlow.js</a> for your flexible and intuitive APIs.
+            </p>
         </div>
-      </div>
     </div>
-  </section>
-
-
-  <script>
-  function myFunction() {
-    var x = document.getElementById("myDIV");
-    if (x.style.display === "none") {
-      x.style.display = "block";
-    } else {
-      x.style.display = "none";
-    }
-  }
-  </script>
-
-  <!-- Section: Team v.1 -->
-<section class="team-section text-center my-5" id="team">
-
-  <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold my-5">Meet Our Team</h2>
-  <!-- Section description -->
-
-  <!-- Grid row -->
-  <div class="row">
-
-    <!-- Grid column -->
-    <div class="col-md-3 col-md-6">
-      <div class="avatar mx-auto">
-        <img src="gabor.jpg" class="rounded-circle z-depth-1"
-          alt="Gabor">
-      </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Gábor Miskovics</h5>
-      <p class="text-uppercase blue-text"><strong>Product Manager</strong></p>
-
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-md-3 col-md-6">
-      <div class="avatar mx-auto">
-        <img src="nate.jpg" class="rounded-circle z-depth-1"
-          alt="Nate">
-      </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Jonathan Kuhl</h5>
-      <p class="text-uppercase blue-text"><strong>Product Manager</strong></p>
-
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-
-    <div class="col-md-3 col-md-6">
-      <div class="avatar mx-auto">
-
-        <img src="sofia.jpg" class="rounded-circle z-depth-1"
-          alt="Sofia">
-      </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Sofiia Tatarinova</h5>
-      <p class="text-uppercase blue-text"><strong>Interaction Designer</strong></p>
-
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="col-md-3 col-md-6">
-      <div class="avatar mx-auto">
-        <img src="ansab.jpg" class="rounded-circle z-depth-1"
-          alt="Ansab">
-      </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Muhammad Ansab Shohab</h5>
-      <p class="text-uppercase blue-text"><strong>Software Engineer</strong></p>
-
-    </div>
-    <!-- Grid column -->
-    <!-- Grid column -->
-    <div class="col-md-3 col-md-6">
-      <div class="avatar mx-auto">
-        <img src="iryna.jpg" class="rounded-circle z-depth-1"
-          alt="Iryna">
-      </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Iryna Soltyska</h5>
-      <p class="text-uppercase blue-text"><strong>Software Engineer</strong></p>
-
-    </div>
-    <!-- Grid column -->
-    <!-- Grid column -->
-    <div class="col-md-3 col-md-6">
-      <div class="avatar mx-auto">
-        <img src="adil.jpg" class="rounded-circle z-depth-1"
-          alt="Adil">
-      </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Adil Chakkala Paramba</h5>
-      <p class="text-uppercase blue-text"><strong>Artificial Intelligence Engineer</strong></p>
-
-    </div>
-    <!-- Grid column -->
-
-
-  </div>
-  <!-- Grid row -->
-
-</section>
-<!-- Header -->
-<section class="content-section bg-light" >
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-lg-10 mx-auto" >
-                      <a class="btn btn-primary btn-xl js-scroll-trigger" onclick="myFunction()" href="#ppt">Presentation</a>
-  </div>
-        </div>
-  </div>
-</section>
-
-
-
-
-<!--
-<section class="github section">
-    <div class="section-inner">
-        <h2 class="heading">Github Activities</h2>
-
-
-        <div id="github-graph" class="github-graph">
-
-        </div>
-
-        <div id="feed" class="feed">
-
-        </div>
-
-
-    </div>
-</section>-->
-<section class="content-section bg-light" id="ppt">
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-lg-10 mx-auto" id="myDIV">
-          <iframe src= "https://docs.google.com/a/dpschool.io/presentation/d/e/2PACX-1vS_7NAIa3dBT9DWff9WYvzwlUtgSOy7Q4uVMr12uoo1PXAld2oHe5by1hkgX3-GHuFvsbHTVXOXw7m9/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"> </iframe>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- Section: Team v.1 -->
-<footer class="footer text-center">
-  <div class="container">
-    <ul class="list-inline mb-5">
-      <li class="list-inline-item">
-        <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/digitalproductschool">
-          <i class="icon-social-facebook"></i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/dpschool_io">
-          <i class="icon-social-twitter"></i>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="social-link rounded-circle text-white" href="https://github.com/DigitalProductschool">
-          <i class="icon-social-github"></i>
-        </a>
-      </li>
-    </ul>
-
-  </div>
-</footer>
-
-
-  <!-- Call to Action -->
-
-
-  <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-  </a>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/stylish-portfolio.min.js"></script>
-  <script type="text/javascript" src="plugins/github-calendar/dist/github-calendar.min.js"></script>
-<!-- github activity plugin -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-<script type="text/javascript" src="plugins/github-activity/github-activity-0.1.5.min.js"></script>
-<script>
-  GitHubActivity.feed({
-      username: "DigitalProductschool",
-      //repository: "your-repo", // optional
-      selector: "#feed",
-      limit: 5 // optional
-  });
-</script>
-<script>
-
-    new GitHubCalendar(".github-graph", "DigitalProductschool", {responsive:true});
-</script>
-
+    <script src="https://cdn.jsdelivr.net/npm/dat.gui@0.7.2/build/dat.gui.js"></script>
+    <script src="https://unpkg.com/@tensorflow/tfjs"></script>
+    <script src="https://unpkg.com/@tensorflow-models/posenet"></script>
+    
+    <script src="demo_util.js"></script>
+    <script src="stats.min.js "></script>
+    <script src="camera.js"></script>
 </body>
 
 </html>
