--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   </head>
   <body>
-      <input type="button" value="Download Test" onClick="showAndroidToast('barmer', 'testURL')" />
+      <input type="button" value="Download Test" onClick="mobileDownload('barmer', 'testURL')" />
       <br/><br/>
       <p id="version"></p>
       <script type="text/javascript">
