--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 
   </head>
   <body>
-      <input type="button" value="Download Test" onClick="mobileDownload('barmer', 'testURL')" />
+      <input type="button" value="Download Test1" onClick="mobileDownload('barmer', 'testURL')" />
       <br/><br/>
       <p id="version"></p>
       <script type="text/javascript">
      function mobileDownload(fileName, url) {
+		 	console.log(Barmer);
             Barmer.download(fileName, url);
         }
 
